--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@semantic-release/git": "^7.0.8",
     "@semantic-release/github": "^5.2.10",
     "@semantic-release/release-notes-generator": "^7.1.4",
+    "autoprefixer": "^9.6.2",
     "babel-loader": "^8.0.6",
     "babel-preset-gatsby": "^0.2.11",
     "clipboard": "^2.0.4",
@@ -57,21 +58,29 @@
     "gatsby": "^2.3.16",
     "gatsby-image": "^2.0.37",
     "gatsby-plugin-catch-links": "^2.0.13",
-    "gatsby-plugin-less": "^2.0.12",
     "gatsby-plugin-manifest": "^2.0.28",
     "gatsby-plugin-module-resolver": "^1.0.3",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-page-creator": "^2.0.13",
+    "gatsby-plugin-postcss": "^2.1.10",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-remark-component": "^1.1.3",
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-transformer-remark": "^2.3.8",
     "gh-pages": "^1.2.0",
     "glob": "^7.1.4",
-    "less": "^3.9.0",
-    "less-loader": "^5.0.0",
     "lodash.kebabcase": "^4.1.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-custom-media": "^7.0.8",
+    "postcss-custom-properties": "^9.0.2",
+    "postcss-extend-rule": "^3.0.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-mixins": "^6.2.2",
+    "postcss-nesting": "^7.0.1",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-scss": "^2.0.0",
+    "postcss-simple-vars": "^5.0.2",
     "prism-themes": "^1.1.0",
     "prismjs": "^1.16.0",
     "prop-types": "^15.7.2",
