--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "babel-loader": "^8.0.6",
     "babel-preset-gatsby": "^0.2.11",
     "clipboard": "^2.0.4",
+    "color": "^3.1.2",
     "css-loader": "^3.2.0",
     "eslint": "^6.3.0",
     "eslint-config-standard": "^14.1.0",
@@ -76,6 +77,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-mixins": "^6.2.2",
     "postcss-nesting": "^7.0.1",
+    "postcss-object-fit-images": "^1.1.2",
     "postcss-preset-env": "^6.7.0",
     "postcss-scss": "^2.0.0",
     "postcss-simple-vars": "^5.0.2",
