--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gsap": "^3.2.0",
     "regenerator-runtime": "^0.13.3",
     "relaxed-json": "^1.0.3",
+    "tailwindcss": "^1.4.6",
     "url-polyfill": "^1.1.8"
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "@semantic-release/git": "^7.0.8",
     "@semantic-release/github": "^5.5.8",
     "@semantic-release/release-notes-generator": "^7.3.5",
+    "autoprefixer": "^9.8.0",
     "babel-loader": "^8.0.6",
     "babel-preset-gatsby": "^0.2.29",
     "clipboard": "^2.0.4",
@@ -60,6 +62,7 @@
     "gatsby-plugin-module-resolver": "^1.0.3",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-page-creator": "^2.1.40",
+    "gatsby-plugin-postcss": "^2.3.3",
     "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-remark-component": "^1.1.3",
     "gatsby-remark-custom-blocks": "^2.1.25",
@@ -71,6 +74,8 @@
     "less-loader": "^5.0.0",
     "lodash.kebabcase": "^4.1.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
     "prettier-eslint": "^9.0.1",
     "prism-themes": "^1.3.0",
     "prismjs": "^1.19.0",
