--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
     "gatsby": "^2.19.19",
     "gatsby-image": "^2.2.41",
     "gatsby-plugin-catch-links": "^2.1.25",
-    "gatsby-plugin-less": "^2.1.2",
     "gatsby-plugin-manifest": "^2.2.41",
     "gatsby-plugin-module-resolver": "^1.0.3",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-page-creator": "^2.1.40",
+    "gatsby-plugin-postcss": "^2.3.3",
     "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-remark-component": "^1.1.3",
     "gatsby-remark-custom-blocks": "^2.1.25",
@@ -68,9 +68,17 @@
     "gh-pages": "^1.2.0",
     "glob": "^7.1.6",
     "less": "^3.11.1",
-    "less-loader": "^5.0.0",
     "lodash.kebabcase": "^4.1.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-calc": "^7.0.2",
+    "postcss-extend-rule": "^3.0.0",
+    "postcss-import": "^12.0.1",
+    "postcss-mixins": "^6.2.3",
+    "postcss-nesting": "^7.0.1",
+    "postcss-object-fit-images": "^1.1.2",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-scss": "^2.1.1",
+    "postcss-simple-vars": "^5.0.2",
     "prettier-eslint": "^9.0.1",
     "prism-themes": "^1.3.0",
     "prismjs": "^1.19.0",
