--- a/package.json
+++ b/package.json
@@ -73,8 +73,8 @@
     "postcss-calc": "^7.0.2",
     "postcss-extend-rule": "^3.0.0",
     "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
     "postcss-mixins": "^6.2.3",
-    "postcss-nesting": "^7.0.1",
     "postcss-object-fit-images": "^1.1.2",
     "postcss-preset-env": "^6.7.0",
     "postcss-scss": "^2.1.1",
