--- a/package.json
+++ b/package.json
@@ -54,12 +54,12 @@
     "esm": "^3.2.25",
     "gatsby": "^2.23.20",
     "gatsby-plugin-catch-links": "^2.3.10",
-    "gatsby-plugin-less": "^4.0.0",
     "gatsby-plugin-manifest": "^2.4.17",
     "gatsby-plugin-module-resolver": "^1.0.3",
     "gatsby-plugin-offline": "^3.2.16",
     "gatsby-plugin-page-creator": "^2.3.15",
     "gatsby-plugin-react-helmet": "^3.3.9",
+    "gatsby-plugin-sass": "^2.3.12",
     "gatsby-remark-classes": "^1.0.0",
     "gatsby-remark-component": "^1.1.3",
     "gatsby-remark-custom-blocks": "^2.3.9",
@@ -68,7 +68,6 @@
     "gh-pages": "^3.1.0",
     "glob": "^7.1.6",
     "indent-string": "^4.0.0",
-    "less-loader": "^6.2.0",
     "lodash.kebabcase": "^4.1.1",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
@@ -83,6 +82,8 @@
     "react-helmet": "^6.1.0",
     "rehype-react": "^6.0.0",
     "remark-grid-tables": "^2.1.1",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
     "semantic-release": "^17.1.1",
     "terser-webpack-plugin": "^3.0.6",
     "webpack": "^4.41.6",
