--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "lodash.kebabcase": "^4.1.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-calc": "^7.0.2",
+    "postcss-extend-rule": "^3.0.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-mixins": "^6.2.3",
