--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
+    "postcss-nesting": "^7.0.1",
     "prettier-eslint": "^9.0.1",
     "prism-themes": "^1.3.0",
     "prismjs": "^1.19.0",
